# Fama_French_factor_models

./: README.md  database.ipynb  pyproject.toml  testing.ipynb
