[project]
name = "3-12-11"
version = "3.12.11"
description = "Fama french factor models with data from yfinance"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.12.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "numpy (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "3"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
